--- a/javascript/day-09-SP/chi-tiet-blog.html
+++ b/javascript/day-09-SP/chi-tiet-blog.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Chi tiết blog</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/d898046858.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/style.css">
@@ -12,7 +12,7 @@
     <header >
         <div class="container bg-ct">
             <nav class="navbar navbar-expand-lg">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="index.html">
                   <img src="https://motchilltv.ac/_ipx/s_150x35/logo.png" alt="logo">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -20,10 +20,10 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                   <div class="navbar-nav">
-                    <a class="nav-link text-white" href="#">Trang chủ</a>
-                    <a class="nav-link text-white" href="#">Phim bộ</a>
-                    <a class="nav-link text-white" href="#">Phim lẻ</a>
-                    <a class="nav-link text-white" href="#">Phim chiếu rạp</a>
+                    <a class="nav-link text-white" href="index.html">Trang chủ</a>
+                    <a class="nav-link text-white" href="danh-sach-phim.html">Phim bộ</a>
+                    <a class="nav-link text-white" href="danh-sach-phim.html">Phim lẻ</a>
+                    <a class="nav-link text-white" href="danh-sach-phim.html">Phim chiếu rạp</a>
                   </div>
                 </div>
           </nav>
