--- a/javascript/day-09-SP/danh-sach-blog.html
+++ b/javascript/day-09-SP/danh-sach-blog.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Danh sách blog</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -11,7 +11,7 @@
     <header >
         <div class="container bg-ct">
             <nav class="navbar navbar-expand-lg">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="index.html">
                   <img src="https://motchilltv.ac/_ipx/s_150x35/logo.png" alt="logo">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -19,10 +19,10 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                   <div class="navbar-nav">
-                    <a class="nav-link text-white" href="#">Trang chủ</a>
-                    <a class="nav-link text-white" href="#">Phim bộ</a>
-                    <a class="nav-link text-white" href="#">Phim lẻ</a>
-                    <a class="nav-link text-white" href="#">Phim chiếu rạp</a>
+                    <a class="nav-link text-white" href="index.html">Trang chủ</a>
+                    <a class="nav-link text-white" href="danh-sach-phim.html">Phim bộ</a>
+                    <a class="nav-link text-white" href="danh-sach-phim.html">Phim lẻ</a>
+                    <a class="nav-link text-white" href="danh-sach-phim.html">Phim chiếu rạp</a>
                   </div>
                 </div>
           </nav>
@@ -38,60 +38,76 @@
 
             <div class="row">
                 <div class="col-6">
-                    <div class="bg-body-secondary p-4 rounded">
-                        <h5>Top 10 Bộ Phim Hoa Ngữ Sắp Chiếu Năm 2024</h5>
-                        <p>Jan 1, 2023</p>
-                        <p class="mb-0">Dù chưa ra mắt nhưng năm 2024 hứa hẹn sẽ có nhiều phim cổ trang bom tấn làm cho mọt phim đón đợi. Cùng Motchill điểm danh Top 10 Phim Cổ Trang Trung Quốc Sắp Ra Mắt Năm 2024 bên dưới nhé.</p>
-                    </div>
+                    <a href="chi-tiet-blog.html">
+                        <div class="bg-body-secondary p-4 rounded text-black">
+                            <h5>Top 10 Bộ Phim Hoa Ngữ Sắp Chiếu Năm 2024</h5>
+                            <p>Jan 1, 2023</p>
+                            <p class="mb-0">Dù chưa ra mắt nhưng năm 2024 hứa hẹn sẽ có nhiều phim cổ trang bom tấn làm cho mọt phim đón đợi. Cùng Motchill điểm danh Top 10 Phim Cổ Trang Trung Quốc Sắp Ra Mắt Năm 2024 bên dưới nhé.</p>
+                        </div>
+                    </a>
                 </div>
                 <div class="col-6">
-                    <div class="bg-body-secondary p-4 rounded">
-                        <h5>Top 10 Bộ Phim Hoa Ngữ Sắp Chiếu Năm 2024</h5>
-                        <p>Jan 1, 2023</p>
-                        <p class="mb-0">Dù chưa ra mắt nhưng năm 2024 hứa hẹn sẽ có nhiều phim cổ trang bom tấn làm cho mọt phim đón đợi. Cùng Motchill điểm danh Top 10 Phim Cổ Trang Trung Quốc Sắp Ra Mắt Năm 2024 bên dưới nhé.</p>
-                    </div>
+                    <a href="chi-tiet-blog.html">
+                        <div class="bg-body-secondary p-4 rounded text-black">
+                            <h5>Top 10 Bộ Phim Hoa Ngữ Sắp Chiếu Năm 2024</h5>
+                            <p>Jan 1, 2023</p>
+                            <p class="mb-0">Dù chưa ra mắt nhưng năm 2024 hứa hẹn sẽ có nhiều phim cổ trang bom tấn làm cho mọt phim đón đợi. Cùng Motchill điểm danh Top 10 Phim Cổ Trang Trung Quốc Sắp Ra Mắt Năm 2024 bên dưới nhé.</p>
+                        </div>
+                    </a>
                 </div>
                 <div class="col-6">
-                    <div class="bg-body-secondary p-4 rounded mt-4">
-                        <h5>Top 10 Bộ Phim Hoa Ngữ Sắp Chiếu Năm 2024</h5>
-                        <p>Jan 1, 2023</p>
-                        <p class="mb-0">Dù chưa ra mắt nhưng năm 2024 hứa hẹn sẽ có nhiều phim cổ trang bom tấn làm cho mọt phim đón đợi. Cùng Motchill điểm danh Top 10 Phim Cổ Trang Trung Quốc Sắp Ra Mắt Năm 2024 bên dưới nhé.</p>
-                    </div>
+                    <a href="chi-tiet-blog.html">
+                        <div class="bg-body-secondary p-4 rounded text-black mt-4">
+                            <h5>Top 10 Bộ Phim Hoa Ngữ Sắp Chiếu Năm 2024</h5>
+                            <p>Jan 1, 2023</p>
+                            <p class="mb-0">Dù chưa ra mắt nhưng năm 2024 hứa hẹn sẽ có nhiều phim cổ trang bom tấn làm cho mọt phim đón đợi. Cùng Motchill điểm danh Top 10 Phim Cổ Trang Trung Quốc Sắp Ra Mắt Năm 2024 bên dưới nhé.</p>
+                        </div>
+                    </a>
                 </div>
                 <div class="col-6">
-                    <div class="bg-body-secondary p-4 rounded mt-4">
-                        <h5>Top 10 Bộ Phim Hoa Ngữ Sắp Chiếu Năm 2024</h5>
-                        <p>Jan 1, 2023</p>
-                        <p class="mb-0">Dù chưa ra mắt nhưng năm 2024 hứa hẹn sẽ có nhiều phim cổ trang bom tấn làm cho mọt phim đón đợi. Cùng Motchill điểm danh Top 10 Phim Cổ Trang Trung Quốc Sắp Ra Mắt Năm 2024 bên dưới nhé.</p>
-                    </div>
+                    <a href="chi-tiet-blog.html">
+                        <div class="bg-body-secondary p-4 rounded text-black mt-4">
+                            <h5>Top 10 Bộ Phim Hoa Ngữ Sắp Chiếu Năm 2024</h5>
+                            <p>Jan 1, 2023</p>
+                            <p class="mb-0">Dù chưa ra mắt nhưng năm 2024 hứa hẹn sẽ có nhiều phim cổ trang bom tấn làm cho mọt phim đón đợi. Cùng Motchill điểm danh Top 10 Phim Cổ Trang Trung Quốc Sắp Ra Mắt Năm 2024 bên dưới nhé.</p>
+                        </div>
+                    </a>
                 </div>
                 <div class="col-6">
-                    <div class="bg-body-secondary p-4 rounded mt-4">
-                        <h5>Top 10 Bộ Phim Hoa Ngữ Sắp Chiếu Năm 2024</h5>
-                        <p>Jan 1, 2023</p>
-                        <p class="mb-0">Dù chưa ra mắt nhưng năm 2024 hứa hẹn sẽ có nhiều phim cổ trang bom tấn làm cho mọt phim đón đợi. Cùng Motchill điểm danh Top 10 Phim Cổ Trang Trung Quốc Sắp Ra Mắt Năm 2024 bên dưới nhé.</p>
-                    </div>
+                    <a href="chi-tiet-blog.html">
+                        <div class="bg-body-secondary p-4 rounded text-black mt-4">
+                            <h5>Top 10 Bộ Phim Hoa Ngữ Sắp Chiếu Năm 2024</h5>
+                            <p>Jan 1, 2023</p>
+                            <p class="mb-0">Dù chưa ra mắt nhưng năm 2024 hứa hẹn sẽ có nhiều phim cổ trang bom tấn làm cho mọt phim đón đợi. Cùng Motchill điểm danh Top 10 Phim Cổ Trang Trung Quốc Sắp Ra Mắt Năm 2024 bên dưới nhé.</p>
+                        </div>
+                    </a>
                 </div>
                 <div class="col-6">
-                    <div class="bg-body-secondary p-4 rounded mt-4">
-                        <h5>Top 10 Bộ Phim Hoa Ngữ Sắp Chiếu Năm 2024</h5>
-                        <p>Jan 1, 2023</p>
-                        <p class="mb-0">Dù chưa ra mắt nhưng năm 2024 hứa hẹn sẽ có nhiều phim cổ trang bom tấn làm cho mọt phim đón đợi. Cùng Motchill điểm danh Top 10 Phim Cổ Trang Trung Quốc Sắp Ra Mắt Năm 2024 bên dưới nhé.</p>
-                    </div>
+                    <a href="chi-tiet-blog.html">
+                        <div class="bg-body-secondary p-4 rounded text-black mt-4">
+                            <h5>Top 10 Bộ Phim Hoa Ngữ Sắp Chiếu Năm 2024</h5>
+                            <p>Jan 1, 2023</p>
+                            <p class="mb-0">Dù chưa ra mắt nhưng năm 2024 hứa hẹn sẽ có nhiều phim cổ trang bom tấn làm cho mọt phim đón đợi. Cùng Motchill điểm danh Top 10 Phim Cổ Trang Trung Quốc Sắp Ra Mắt Năm 2024 bên dưới nhé.</p>
+                        </div>
+                    </a>
                 </div>
                 <div class="col-6">
-                    <div class="bg-body-secondary p-4 rounded mt-4">
-                        <h5>Top 10 Bộ Phim Hoa Ngữ Sắp Chiếu Năm 2024</h5>
-                        <p>Jan 1, 2023</p>
-                        <p class="mb-0">Dù chưa ra mắt nhưng năm 2024 hứa hẹn sẽ có nhiều phim cổ trang bom tấn làm cho mọt phim đón đợi. Cùng Motchill điểm danh Top 10 Phim Cổ Trang Trung Quốc Sắp Ra Mắt Năm 2024 bên dưới nhé.</p>
-                    </div>
+                    <a href="chi-tiet-blog.html">
+                        <div class="bg-body-secondary p-4 rounded text-black mt-4">
+                            <h5>Top 10 Bộ Phim Hoa Ngữ Sắp Chiếu Năm 2024</h5>
+                            <p>Jan 1, 2023</p>
+                            <p class="mb-0">Dù chưa ra mắt nhưng năm 2024 hứa hẹn sẽ có nhiều phim cổ trang bom tấn làm cho mọt phim đón đợi. Cùng Motchill điểm danh Top 10 Phim Cổ Trang Trung Quốc Sắp Ra Mắt Năm 2024 bên dưới nhé.</p>
+                        </div>
+                    </a>
                 </div>
                 <div class="col-6">
-                    <div class="bg-body-secondary p-4 rounded mt-4">
-                        <h5>Top 10 Bộ Phim Hoa Ngữ Sắp Chiếu Năm 2024</h5>
-                        <p>Jan 1, 2023</p>
-                        <p class="mb-0">Dù chưa ra mắt nhưng năm 2024 hứa hẹn sẽ có nhiều phim cổ trang bom tấn làm cho mọt phim đón đợi. Cùng Motchill điểm danh Top 10 Phim Cổ Trang Trung Quốc Sắp Ra Mắt Năm 2024 bên dưới nhé.</p>
-                    </div>
+                    <a href="chi-tiet-blog.html">
+                        <div class="bg-body-secondary p-4 rounded text-black mt-4">
+                            <h5>Top 10 Bộ Phim Hoa Ngữ Sắp Chiếu Năm 2024</h5>
+                            <p>Jan 1, 2023</p>
+                            <p class="mb-0">Dù chưa ra mắt nhưng năm 2024 hứa hẹn sẽ có nhiều phim cổ trang bom tấn làm cho mọt phim đón đợi. Cùng Motchill điểm danh Top 10 Phim Cổ Trang Trung Quốc Sắp Ra Mắt Năm 2024 bên dưới nhé.</p>
+                        </div>
+                    </a>
                 </div>
             </div>
             <div class="d-flex justify-content-center mt-4">
