--- a/javascript/day-09-SP/danh-sach-phim.html
+++ b/javascript/day-09-SP/danh-sach-phim.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Danh sách phim</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -11,7 +11,7 @@
     <header >
         <div class="container bg-ct">
             <nav class="navbar navbar-expand-lg">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="index.html">
                   <img src="https://motchilltv.ac/_ipx/s_150x35/logo.png" alt="logo">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -19,10 +19,10 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                   <div class="navbar-nav">
-                    <a class="nav-link text-white" href="#">Trang chủ</a>
-                    <a class="nav-link text-white" href="#">Phim bộ</a>
-                    <a class="nav-link text-white" href="#">Phim lẻ</a>
-                    <a class="nav-link text-white" href="#">Phim chiếu rạp</a>
+                    <a class="nav-link text-white" href="index.html">Trang chủ</a>
+                    <a class="nav-link text-white" href="danh-sach-phim.html">Phim bộ</a>
+                    <a class="nav-link text-white" href="danh-sach-phim.html">Phim lẻ</a>
+                    <a class="nav-link text-white" href="danh-sach-phim.html">Phim chiếu rạp</a>
                   </div>
                 </div>
           </nav>
@@ -37,100 +37,124 @@
 
             <div class="row">
                 <div class="col-2">
-                    <div class="movie-item">
-                        <div class="movie-poster rounded overflow-hidden">
-                            <img class="w-100 h-100" src="https://image.motchilltv.ac/motchill/phat-thanh-vien-thanh-that-x350.webp" alt="">
+                    <a href="chi-tiet-phim.html">
+                        <div class="movie-item">
+                            <div class="movie-poster rounded overflow-hidden">
+                                <img class="w-100 h-100" src="https://image.motchilltv.ac/motchill/phat-thanh-vien-thanh-that-x350.webp" alt="">
+                            </div>
+                            <p class="mt-2 text-white">Phát Thanh Viên Thành Thật</p>
                         </div>
-                        <p class="mt-2 text-white">Phát Thanh Viên Thành Thật</p>
-                    </div>
+                    </a>
                 </div>
                 <div class="col-2">
-                    <div class="movie-item">
-                        <div class="movie-poster rounded overflow-hidden">
-                            <img class="w-100 h-100" src="https://image.motchilltv.ac/motchill/phat-thanh-vien-thanh-that-x350.webp" alt="">
+                    <a href="chi-tiet-phim.html">
+                        <div class="movie-item">
+                            <div class="movie-poster rounded overflow-hidden">
+                                <img class="w-100 h-100" src="https://image.motchilltv.ac/motchill/phat-thanh-vien-thanh-that-x350.webp" alt="">
+                            </div>
+                            <p class="mt-2 text-white">Phát Thanh Viên Thành Thật</p>
                         </div>
-                        <p class="mt-2 text-white">Phát Thanh Viên Thành Thật</p>
-                    </div>
+                    </a>
                 </div>
                 <div class="col-2">
-                    <div class="movie-item">
-                        <div class="movie-poster rounded overflow-hidden">
-                            <img class="w-100 h-100" src="https://image.motchilltv.ac/motchill/phat-thanh-vien-thanh-that-x350.webp" alt="">
+                    <a href="chi-tiet-phim.html">
+                        <div class="movie-item">
+                            <div class="movie-poster rounded overflow-hidden">
+                                <img class="w-100 h-100" src="https://image.motchilltv.ac/motchill/phat-thanh-vien-thanh-that-x350.webp" alt="">
+                            </div>
+                            <p class="mt-2 text-white">Phát Thanh Viên Thành Thật</p>
                         </div>
-                        <p class="mt-2 text-white">Phát Thanh Viên Thành Thật</p>
-                    </div>
+                    </a>
                 </div>
                 <div class="col-2">
-                    <div class="movie-item">
-                        <div class="movie-poster rounded overflow-hidden">
-                            <img class="w-100 h-100" src="https://image.motchilltv.ac/motchill/phat-thanh-vien-thanh-that-x350.webp" alt="">
+                    <a href="chi-tiet-phim.html">
+                        <div class="movie-item">
+                            <div class="movie-poster rounded overflow-hidden">
+                                <img class="w-100 h-100" src="https://image.motchilltv.ac/motchill/phat-thanh-vien-thanh-that-x350.webp" alt="">
+                            </div>
+                            <p class="mt-2 text-white">Phát Thanh Viên Thành Thật</p>
                         </div>
-                        <p class="mt-2 text-white">Phát Thanh Viên Thành Thật</p>
-                    </div>
+                    </a>
                 </div>
                 <div class="col-2">
-                    <div class="movie-item">
-                        <div class="movie-poster rounded overflow-hidden">
-                            <img class="w-100 h-100" src="https://image.motchilltv.ac/motchill/phat-thanh-vien-thanh-that-x350.webp" alt="">
+                    <a href="chi-tiet-phim.html">
+                        <div class="movie-item">
+                            <div class="movie-poster rounded overflow-hidden">
+                                <img class="w-100 h-100" src="https://image.motchilltv.ac/motchill/phat-thanh-vien-thanh-that-x350.webp" alt="">
+                            </div>
+                            <p class="mt-2 text-white">Phát Thanh Viên Thành Thật</p>
                         </div>
-                        <p class="mt-2 text-white">Phát Thanh Viên Thành Thật</p>
-                    </div>
+                    </a>
                 </div>
                 <div class="col-2">
-                    <div class="movie-item">
-                        <div class="movie-poster rounded overflow-hidden">
-                            <img class="w-100 h-100" src="https://image.motchilltv.ac/motchill/phat-thanh-vien-thanh-that-x350.webp" alt="">
+                    <a href="chi-tiet-phim.html">
+                        <div class="movie-item">
+                            <div class="movie-poster rounded overflow-hidden">
+                                <img class="w-100 h-100" src="https://image.motchilltv.ac/motchill/phat-thanh-vien-thanh-that-x350.webp" alt="">
+                            </div>
+                            <p class="mt-2 text-white">Phát Thanh Viên Thành Thật</p>
                         </div>
-                        <p class="mt-2 text-white">Phát Thanh Viên Thành Thật</p>
-                    </div>
+                    </a>
                 </div>
                 <div class="col-2">
-                    <div class="movie-item">
-                        <div class="movie-poster rounded overflow-hidden">
-                            <img class="w-100 h-100" src="https://image.motchilltv.ac/motchill/phat-thanh-vien-thanh-that-x350.webp" alt="">
+                    <a href="chi-tiet-phim.html">
+                        <div class="movie-item">
+                            <div class="movie-poster rounded overflow-hidden">
+                                <img class="w-100 h-100" src="https://image.motchilltv.ac/motchill/phat-thanh-vien-thanh-that-x350.webp" alt="">
+                            </div>
+                            <p class="mt-2 text-white">Phát Thanh Viên Thành Thật</p>
                         </div>
-                        <p class="mt-2 text-white">Phát Thanh Viên Thành Thật</p>
-                    </div>
+                    </a>
                 </div>
                 <div class="col-2">
-                    <div class="movie-item">
-                        <div class="movie-poster rounded overflow-hidden">
-                            <img class="w-100 h-100" src="https://image.motchilltv.ac/motchill/phat-thanh-vien-thanh-that-x350.webp" alt="">
+                    <a href="chi-tiet-phim.html">
+                        <div class="movie-item">
+                            <div class="movie-poster rounded overflow-hidden">
+                                <img class="w-100 h-100" src="https://image.motchilltv.ac/motchill/phat-thanh-vien-thanh-that-x350.webp" alt="">
+                            </div>
+                            <p class="mt-2 text-white">Phát Thanh Viên Thành Thật</p>
                         </div>
-                        <p class="mt-2 text-white">Phát Thanh Viên Thành Thật</p>
-                    </div>
+                    </a>
                 </div>
                 <div class="col-2">
-                    <div class="movie-item">
-                        <div class="movie-poster rounded overflow-hidden">
-                            <img class="w-100 h-100" src="https://image.motchilltv.ac/motchill/phat-thanh-vien-thanh-that-x350.webp" alt="">
+                    <a href="chi-tiet-phim.html">
+                        <div class="movie-item">
+                            <div class="movie-poster rounded overflow-hidden">
+                                <img class="w-100 h-100" src="https://image.motchilltv.ac/motchill/phat-thanh-vien-thanh-that-x350.webp" alt="">
+                            </div>
+                            <p class="mt-2 text-white">Phát Thanh Viên Thành Thật</p>
                         </div>
-                        <p class="mt-2 text-white">Phát Thanh Viên Thành Thật</p>
-                    </div>
+                    </a>
                 </div>
                 <div class="col-2">
-                    <div class="movie-item">
-                        <div class="movie-poster rounded overflow-hidden">
-                            <img class="w-100 h-100" src="https://image.motchilltv.ac/motchill/phat-thanh-vien-thanh-that-x350.webp" alt="">
+                    <a href="chi-tiet-phim.html">
+                        <div class="movie-item">
+                            <div class="movie-poster rounded overflow-hidden">
+                                <img class="w-100 h-100" src="https://image.motchilltv.ac/motchill/phat-thanh-vien-thanh-that-x350.webp" alt="">
+                            </div>
+                            <p class="mt-2 text-white">Phát Thanh Viên Thành Thật</p>
                         </div>
-                        <p class="mt-2 text-white">Phát Thanh Viên Thành Thật</p>
-                    </div>
+                    </a>
                 </div>
                 <div class="col-2">
-                    <div class="movie-item">
-                        <div class="movie-poster rounded overflow-hidden">
-                            <img class="w-100 h-100" src="https://image.motchilltv.ac/motchill/phat-thanh-vien-thanh-that-x350.webp" alt="">
+                    <a href="chi-tiet-phim.html">
+                        <div class="movie-item">
+                            <div class="movie-poster rounded overflow-hidden">
+                                <img class="w-100 h-100" src="https://image.motchilltv.ac/motchill/phat-thanh-vien-thanh-that-x350.webp" alt="">
+                            </div>
+                            <p class="mt-2 text-white">Phát Thanh Viên Thành Thật</p>
                         </div>
-                        <p class="mt-2 text-white">Phát Thanh Viên Thành Thật</p>
-                    </div>
+                    </a>
                 </div>
                 <div class="col-2">
-                    <div class="movie-item">
-                        <div class="movie-poster rounded overflow-hidden">
-                            <img class="w-100 h-100" src="https://image.motchilltv.ac/motchill/phat-thanh-vien-thanh-that-x350.webp" alt="">
+                    <a href="chi-tiet-phim.html">
+                        <div class="movie-item">
+                            <div class="movie-poster rounded overflow-hidden">
+                                <img class="w-100 h-100" src="https://image.motchilltv.ac/motchill/phat-thanh-vien-thanh-that-x350.webp" alt="">
+                            </div>
+                            <p class="mt-2 text-white">Phát Thanh Viên Thành Thật</p>
                         </div>
-                        <p class="mt-2 text-white">Phát Thanh Viên Thành Thật</p>
-                    </div>
+                    </a>
                 </div>
             </div>
             <div class="d-flex justify-content-center mt-4">
