--- a/javascript/day-09-SP/danh-sach-phim.html
+++ b/javascript/day-09-SP/danh-sach-phim.html
@@ -32,7 +32,7 @@
     <section>
         <div class="container py-4 bg-ct border-top border-secondary border-opacity-50">
             <div class="d-flex justify-content-between align-items-center mb-2 text-white">
-                <h3>Danh sách phim lẻ</h3>
+                <h3>Danh sách phim</h3>
             </div>
 
             <div class="row">
