--- a/javascript/day-09-SP/chi-tiet-phim.html
+++ b/javascript/day-09-SP/chi-tiet-phim.html
@@ -45,10 +45,12 @@
                 <div class="col">
                     <div class="movie-infor">
                         <h4 class="text-white">Phát Thanh Viên Thành Thật</h4>
-                        <p>Số lượt xem: <span class="text-secondary">1234</span></p>
+                        <p>Năm sản xuất <span class="text-secondary">1234</span></p>
                         <p>Thể loại: <span class="text-secondary">Tình Cảm, Hài Hước </span></p>
+                        <p>Đạo diễn: <span class="text-secondary">Jang Ji-yeon </span></p>
+                        <p>Diễn viên: <span class="text-secondary">Kang Han-na, Go Kyung-pyo, Joo Jong-hyuk, Lee Bom-so-ri, Shin Jung-keun, Kang Ae-sim </span></p>
                         <p>Phát Thanh Viên Thành Thật kể về Song Ki Baek (Go Kyung Pyo thủ vai) độc thân và đã bước sang 33 tuổi. Anh làm việc làm phát thanh viên tại một đài truyền hình. Mọi người coi anh là một phát thanh viên lý tưởng. Anh lịch sự và có bản lĩnh. Một ngày nọ, Song Ki Baek mắc phải một căn bệnh khiến anh nói mà không suy nghĩ trước. Anh đang đối mặt với cuộc khủng hoảng lớn nhất của cuộc đời mình.
-                        Trong khi đó, On Woo Joo (Kang Han Na thủ vai) là một nhà biên kịch chương trình truyền hình giải trí nhiệt huyết. Cô quan tâm đến cách nói thẳng thừng của Song Ki Baek và cô đã khiến anh đồng ý tham gia vào chương trình giải trí của cô.</p>
+                        </p>
                         <p>Rating: 4.4
                             <span class="star"><i class="fa-solid fa-star"></i></span>
                         </p>
@@ -75,12 +77,15 @@
             </div>
             <div class="review px-4 py-3 border border-secondary border-opacity-25 rounded-1">
                 <div class="text-white border-bottom border-secondary border-opacity-25 mb-4">
-                    <p class="fw-bold">Bình Luận(2)</p>
+                    <p class="fw-bold">
+                        Bình Luận 
+                        <span>(2)</span>
+                    </p>
                     <p style="font-size: 14px;">Vui lòng <a href="#" class="text-warning-emphasis"> đăng nhập</a> để bình luận</p>
                 </div>
                 <div class="text-white d-flex flex-column mb-3 p-3 user-review rounded-2">
                     <div class="d-flex align-items-center pb-2">
-                        <div class="me-2 rounded-circle  avatar">BN</div>
+                        <img src="https://image.motchilltv.ac/motchill/phat-thanh-vien-thanh-that-x350.webp" class="rounded-circle avatar me-2 "alt="">
                         <p class="m-0 pe-2 review-name">Baotrung Nguyen</p>
                         <p class="m-0 review-time">11 tiếng trước</p>
                     </div>
