--- a/javascript/day-09-SP/danh-sach-phim.html
+++ b/javascript/day-09-SP/danh-sach-phim.html
@@ -31,8 +31,8 @@
 
     <section>
         <div class="container py-4 bg-ct border-top border-secondary border-opacity-50">
-            <div class="d-flex justify-content-between align-items-center mb-2 text-white">
-                <h3>Danh sách phim</h3>
+            <div class=" mb-5 text-white">
+                <h3 class="text-center">Danh sách phim</h3>
             </div>
 
             <div class="row">
