--- a/javascript/day-09-SP/index.html
+++ b/javascript/day-09-SP/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movie</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/d898046858.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -303,50 +304,41 @@
                 <h3>Tin tức</h3>
                 <a href="">Xem thêm</a>
             </div>
-
-            <div class="row">
-                <div class="col-6">
-                    <a href="chi-tiet-blog.html">
-                        <div class="bg-body-secondary p-4 rounded text-black">
-                            <h5>Top 10 Bộ Phim Hoa Ngữ Sắp Chiếu Năm 2024</h5>
-                            <p>Jan 1, 2023</p>
-                            <p class="mb-0">Dù chưa ra mắt nhưng năm 2024 hứa hẹn sẽ có nhiều phim cổ trang bom tấn làm cho mọt phim đón đợi. Cùng Motchill điểm danh Top 10 Phim Cổ Trang Trung Quốc Sắp Ra Mắt Năm 2024 bên dưới nhé.</p>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-6">
-                    <a href="chi-tiet-blog.html">
-                        <div class="bg-body-secondary p-4 rounded text-black">
-                            <h5>Top 10 Bộ Phim Hoa Ngữ Sắp Chiếu Năm 2024</h5>
-                            <p>Jan 1, 2023</p>
-                            <p class="mb-0">Dù chưa ra mắt nhưng năm 2024 hứa hẹn sẽ có nhiều phim cổ trang bom tấn làm cho mọt phim đón đợi. Cùng Motchill điểm danh Top 10 Phim Cổ Trang Trung Quốc Sắp Ra Mắt Năm 2024 bên dưới nhé.</p>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-6">
-                    <a href="chi-tiet-blog.html">
-                        <div class="bg-body-secondary p-4 rounded mt-4 text-black">
-                            <h5>Top 10 Bộ Phim Hoa Ngữ Sắp Chiếu Năm 2024</h5>
-                            <p>Jan 1, 2023</p>
-                            <p class="mb-0">Dù chưa ra mắt nhưng năm 2024 hứa hẹn sẽ có nhiều phim cổ trang bom tấn làm cho mọt phim đón đợi. Cùng Motchill điểm danh Top 10 Phim Cổ Trang Trung Quốc Sắp Ra Mắt Năm 2024 bên dưới nhé.</p>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-6">
-                    <a href="chi-tiet-blog.html">
-                        <div class="bg-body-secondary p-4 rounded mt-4 text-black">
-                            <h5>Top 10 Bộ Phim Hoa Ngữ Sắp Chiếu Năm 2024</h5>
-                            <p>Jan 1, 2023</p>
-                            <p class="mb-0">Dù chưa ra mắt nhưng năm 2024 hứa hẹn sẽ có nhiều phim cổ trang bom tấn làm cho mọt phim đón đợi. Cùng Motchill điểm danh Top 10 Phim Cổ Trang Trung Quốc Sắp Ra Mắt Năm 2024 bên dưới nhé.</p>
-                        </div>
-                    </a>
+            <div>
+                <div class="py-3 border-bottom border-secondary border-opacity-50">
+                    <a href="" class="title-blog-index"><h5>Top 10 Bộ Phim Hoa Ngữ Sắp Chiếu Năm 2024 <span class="blog-time-index text-secondary">Jan 23, 2024</span></h5></a>
+                    <p class="mb-1 text-secondary">Dù chưa ra mắt nhưng năm 2024 hứa hẹn sẽ có nhiều phim cổ trang bom tấn làm cho mọt phim đón đợi. Cùng Motchill điểm danh Top 10 Phim Cổ Trang Trung Quốc Sắp Ra Mắt Năm 2024 bên dưới nhé.</p>
+                    <a href="" class="click-blog">Xem thêm  <i class="fa-solid fa-arrow-right"></i></a>
                 </div>
             </div>
+            <div>
+                <div class="py-3 border-bottom border-secondary border-opacity-50">
+                    <a href="" class="title-blog-index"><h5>Top 10 Bộ Phim Hoa Ngữ Sắp Chiếu Năm 2024 <span class="blog-time-index text-secondary">Jan 23, 2024</span></h5></a>
+                    <p class="mb-1 text-secondary">Dù chưa ra mắt nhưng năm 2024 hứa hẹn sẽ có nhiều phim cổ trang bom tấn làm cho mọt phim đón đợi. Cùng Motchill điểm danh Top 10 Phim Cổ Trang Trung Quốc Sắp Ra Mắt Năm 2024 bên dưới nhé.</p>
+                    <a href="" class="click-blog">Xem thêm  <i class="fa-solid fa-arrow-right"></i></a>
+                </div>
+            </div>
+            <div>
+                <div class="py-3 border-bottom border-secondary border-opacity-50">
+                    <a href="" class="title-blog-index"><h5>Top 10 Bộ Phim Hoa Ngữ Sắp Chiếu Năm 2024 <span class="blog-time-index text-secondary">Jan 23, 2024</span></h5></a>
+                    <p class="mb-1 text-secondary">Dù chưa ra mắt nhưng năm 2024 hứa hẹn sẽ có nhiều phim cổ trang bom tấn làm cho mọt phim đón đợi. Cùng Motchill điểm danh Top 10 Phim Cổ Trang Trung Quốc Sắp Ra Mắt Năm 2024 bên dưới nhé.</p>
+                    <a href="" class="click-blog">Xem thêm  <i class="fa-solid fa-arrow-right"></i></a>
+                </div>
+            </div>
+            <div>
+                <div class="py-3 border-bottom border-secondary border-opacity-50">
+                    <a href="" class="title-blog-index"><h5>Top 10 Bộ Phim Hoa Ngữ Sắp Chiếu Năm 2024 <span class="blog-time-index text-secondary">Jan 23, 2024</span></h5></a>
+                    <p class="mb-1 text-secondary">Dù chưa ra mắt nhưng năm 2024 hứa hẹn sẽ có nhiều phim cổ trang bom tấn làm cho mọt phim đón đợi. Cùng Motchill điểm danh Top 10 Phim Cổ Trang Trung Quốc Sắp Ra Mắt Năm 2024 bên dưới nhé.</p>
+                    <a href="" class="click-blog">Xem thêm  <i class="fa-solid fa-arrow-right"></i></a>
+                </div>
+            </div>
+                
+            
         </div>
     </section>
 
     <footer >
-        <div class="py-4 container border-top border-secondary border-opacity-50 bg-ct">
+        <div class="py-4 container  bg-ct">
             <div class="row">
                 <div class="col-4">
                     <img src="https://motchilltv.ac/_ipx/s_150x35/logo.png" alt="">
